// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`document history can be generated 1`] = `
Object {
  "content": "hello world
",
  "diff": "@@ -0,0 +1 @@
+hello world
",
  "document_id": Any<String>,
  "user_id": Any<String>,
}
`;

exports[`document history can be generated 2`] = `
Object {
  "content": "hello world
user b here to write
",
  "diff": "@@ -1 +1,2 @@
 hello world
+user b here to write
",
  "document_id": Any<String>,
  "user_id": Any<String>,
}
`;

exports[`document history can be generated 3`] = `
Object {
  "content": "hello world
user b here to write
Second Update
",
  "diff": "@@ -1,2 +1,3 @@
 hello world
 user b here to write
+Second Update
",
  "document_id": Any<String>,
  "user_id": Any<String>,
}
`;

exports[`document history can be generated 4`] = `
Object {
  "content": "hello world
user b here to write
Second Update
user a second Update
",
  "diff": "@@ -1,3 +1,4 @@
 hello world
 user b here to write
 Second Update
+user a second Update
",
  "document_id": Any<String>,
  "user_id": Any<String>,
}
`;

exports[`document history can be generated 5`] = `
Object {
  "content": "hello world
user b here to write
Second Update
user a second Update


aowejfoaiewjf
",
  "diff": "@@ -2,3 +2,6 @@ hello world
 user b here to write
 Second Update
 user a second Update
+
+
+aowejfoaiewjf
",
  "document_id": Any<String>,
  "user_id": Any<String>,
}
`;

exports[`document history can be generated 6`] = `
Object {
  "content": "# YOOOOO

hello world
user b here to write
Second Update
user a second Update


aowejfoaiewjf
",
  "diff": "@@ -1,3 +1,5 @@
+# YOOOOO
+
 hello world
 user b here to write
 Second Update
",
  "document_id": Any<String>,
  "user_id": Any<String>,
}
`;

exports[`document history replaced in table 1`] = `
Object {
  "diff": "@@ -0,0 +1 @@
+hello world
",
  "document_id": Any<String>,
  "id": Any<String>,
  "user_id": Any<String>,
}
`;

exports[`document history replaced in table 2`] = `
Object {
  "diff": "@@ -1 +1,2 @@
 hello world
+user b here to write
",
  "document_id": Any<String>,
  "id": Any<String>,
  "user_id": Any<String>,
}
`;

exports[`document history replaced in table 3`] = `
Object {
  "diff": "@@ -1,2 +1,3 @@
 hello world
 user b here to write
+Second Update
",
  "document_id": Any<String>,
  "id": Any<String>,
  "user_id": Any<String>,
}
`;

exports[`document history replaced in table 4`] = `
Object {
  "diff": "@@ -1,3 +1,4 @@
 hello world
 user b here to write
 Second Update
+user a second Update
",
  "document_id": Any<String>,
  "id": Any<String>,
  "user_id": Any<String>,
}
`;

exports[`document history replaced in table 5`] = `
Object {
  "diff": "@@ -2,3 +2,6 @@ hello world
 user b here to write
 Second Update
 user a second Update
+
+
+aowejfoaiewjf
",
  "document_id": Any<String>,
  "id": Any<String>,
  "user_id": Any<String>,
}
`;

exports[`document history replaced in table 6`] = `
Object {
  "diff": "@@ -1,3 +1,5 @@
+# YOOOOO
+
 hello world
 user b here to write
 Second Update
",
  "document_id": Any<String>,
  "id": Any<String>,
  "user_id": Any<String>,
}
`;
